--- a/src/bib/mybib.bib
+++ b/src/bib/mybib.bib
@@ -37,6 +37,15 @@ abstract = {We present a broad extension of the conventional formalism of state 
 
 @ARTICLE{24143,  author={Murata, T.},  journal={Proceedings of the IEEE},   title={Petri nets: Properties, analysis and applications},   year={1989},  volume={77},  number={4},  pages={541-580},  doi={10.1109/5.24143}}
 
+@article{https://doi:10.4018/978-1-4666-5888-2.ch705,
+author = {Hasan, Osman and Sofiène Tahar. },
+title = {Encyclopedia of Information Science and Technology, Third Edition},
+chapter={Formal Verification Methods.},
+pages = {7162-7170.},
+doi = {https://doi:10.4018/978-1-4666-5888-2.ch705},
+year = {2015}
+}
+
 @article{https://doi.org/10.1002/sys.21524,
 author = {Huang, Edward and McGinnis, Leon F. and Mitchell, Steven W.},
 title = {Verifying SysML activity diagrams using formal transformation to Petri nets},
@@ -52,10 +61,86 @@ abstract = {Abstract The development of contemporary systems is an extremely com
 year = {2020}
 }
 
+
+@article{DoD_modeling_and_simulation,
+author = {DoD},
+title = {DoD Modeling and Simulation (M\&S) Glossary},
+journal = {DoD Manual 5000.59-M. Arlington, VA, USA: US Department of Defense},
+url = {https://apps.dtic.mil/sti/pdfs/ADA349800.pdf},
+year = {1998}
+}
+@article{sysml_practical_guide,
+author = {Friedenthal, S., A. Moore, R. Steiner, and M. Kaufman.},
+title = {A Practical Guide to SysML: The Systems Modeling Language, 3rd Edition. },
+journal = {MK/OMG Press.,},
+year = {2014}
+}
+@article{modsim,
+author = {Bellinger, G},
+title = {Modeling \& Simulation: An Introduction.},
+url = {http://www.systems-thinking.org/modsim/modsim.htm},
+year = {2004}
+}
+@article{object-process-methodology,
+author = {Dori, D.},
+title = {Object-Process Methodology: A Holistic System Paradigm.},
+journal = {New York, NY, USA: Springer.},
+year = {2002}
+}
+@article{ORMSC/2010-09-06,
+author = {Object Management Group},
+title = {MDA Foundation Model. OMG document number ORMSC/2010-09-06.},
+year = {2010}
+}
+
+@article{incose-systems-engineering-2020,
+title = {Technical Operations International Council on Systems Engineering INCOSE. INCOSE Systems Engineering Vision 2020. Technical report.},
+url = {https://sebokwiki.org/wiki/INCOSE_Systems_Engineering_Vision_2020}
+}
+@article{mbse,
+title = {Model-Based Systems Engineering (MBSE) (glossary)},
+url = {https://sebokwiki.org/wiki/Model-Based_Systems_Engineering_(MBSE)_(glossary)}
+}
+@article{omgwiki,
+title = {MBSE Wiki},
+url = {https://www.omgwiki.org/MBSE/doku.php?id=start}
+}
+
 @article{fuml,
-author = {OMG},
+author = {Object Management Group},
 title = {Semantics of a Foundational Subset for Executable UML Models},
 url = {https://www.omg.org/spec/FUML/1.4/},
 year = {2018}
 }
-https://www.omg.org/spec/FUML/1.4/
+
+@article{state-vs-activity,
+author = {Samek, Miro},
+year = {2015},
+month = {08},
+pages = {},
+title = {Application Note A Crash Course in UML State Machines Document Revision C}
+}
+
+@article(omg_sysml,
+author = {Object Management Group},
+title = {OMG System Modeling Language},
+url = {https://www.omg.org/spec/SysML/}
+}
+
+@article(uppaal,
+author = {Behrmann, G., David, A., Larsen, K. G., Håkansson, J., Pettersson, P., Yi, W., Hendriks, M.},
+title = {Uppaal 4.0},
+year = {2006}
+}
+@article(theta,
+author = {Tóth, T., Hajdu, A., Vörös, A., Micskei, Z., Majzik, I.},
+title = { Theta: a framework for abstraction refinement-based model checking.},
+journal = {Stewart, D., Weissenbacher, G. (eds.), Proceedings of the 17th Conference on Formal Methods in Computer-Aided Design}
+}
+
+@article(euml,
+author = {Mellor SJ, Balcer MJ.},
+title = {Executable UML: A Foundation for Model- DrivenArchitecture.},
+year = {2002},
+journal = {The Addison-Wesley Object TechnologySeries: Addison-Wesley Professional}
+)
