--- a/src/content/activity-model-verification.tex
+++ b/src/content/activity-model-verification.tex
@@ -1,5 +1,5 @@
 %----------------------------------------------------------------------------
-\chapter{Activity Model Verification}
+\chapter{Activity Model Verification}\label{ch:activiy_verification}
 %----------------------------------------------------------------------------
 
 \input{content/activity-model-verification/state-model}
